<resources>
    <string name="app_name">File Manager</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="themes_text">
        <item>@string/system_default</item>
        <item>Theme White</item>
        <item>Theme Dark</item>
    </string-array>

    <string name="copy_from">From:</string>
    <string name="copy_to">To:</string>
    <string name="copy_pause">Pause</string>
    <string name="copy_resume">Resume</string>
    <string name="copy_retry">Retry</string>
    <string name="copy_overwrite">Overwrite:</string>
    <string name="copy_overwrite_with">With:</string>

    <string name="size_bytes">bytes</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="empty_list">Empty</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="create_folder">Create Folder</string>
    <string name="create_file">Create File</string>
    <string name="toast_files_copied">Copied %1$d file(s)</string>
    <string name="toast_files_cut">Cut %1$d file(s)</string>
    <string name="files_delete">Delete</string>
    <string name="toast_files_deleted">Deleted %1$d file(s)</string>
    <string name="toast_files_archived">Archived \'%1$s\' with %2$d file(s)</string>
    <string name="files_rename">Rename</string>
    <string name="files_deleting">Deleting</string>
    <string name="files_calculating">Calculating</string>
    <string name="files_copying">Copying</string>
    <string name="files_archiving">Archiving</string>
    <string name="files_moving">Moving</string>
    <string name="files_conflict">Conflict</string>
    <string name="unsupported">Not supported format</string>
    <string name="add_bookmark_from_saf">... from SAF</string>
    <string name="add_bookmark_from_from_storage">... from storage</string>
    <string name="file_open">Open</string>
    <string name="file_open_as">Open as ...</string>
    <string name="open_as_text">Text</string>
    <string name="open_as_image">Image</string>
    <string name="open_as_audio">Audio</string>
    <string name="open_as_archive">View Archive</string>
    <string name="open_as_picture">View Picture</string>
    <string name="file_view">View</string>
    <string name="files_paste">Paste</string>
    <string name="files_cancel_paste">Cancel Paste</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_skip">Skip</string>
    <string name="button_overwrite_all">Overwrite all</string>
    <string name="button_skip_all">Skip all</string>
    <string name="button_permissions">Get Permissions</string>
    <string name="button_new_file">New File</string>
    <string name="per_second">/s</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_root_title">Root Browser</string>
    <string name="pref_root_summary">Browse file using root</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_archive">Archive</string>
    <string name="save_to">Save archive to</string>
    <string name="back_exit">Press back again to exit</string>
    <string name="open_as_folder">Open Folder</string>
    <string name="pref_recycle_title">Recycle Bin</string>
    <string name="pref_recycle_summary">Enable recycle bin for deleted files</string>
    <string name="recyclebin_folder">Trash</string>
    <string name="empty_recyclebin">Empty Trash</string>
    <string name="duplicate_folder">Duplicate</string>
    <string name="delete_permanently">Permanently</string>
    <string name="preview">Preview</string>
    <string name="file_viewas">View as ...</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="viewas_hex">Hex</string>
    <string name="free_space">%1$s free</string>
    <string name="sort_by">Sort By ...</string>
    <string name="sort_by_name_a_z">Name A-Z</string>
    <string name="sort_by_name_z_a">Name Z-A</string>
    <string name="sort_by_last_modified_asc">Last Modified Asc</string>
    <string name="sort_by_last_modified_desc">Last Modified Desc</string>
    <string name="sort_by_size_desc">Size Desc</string>
    <string name="sort_by_size_asc">Size Asc</string>
    <string name="properties">Properties</string>
    <string name="select_cancel">Select Cancel</string>
    <string name="select_all">Select All</string>
    <string name="select_invert">Select Invert</string>
</resources>
