<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="root"
        android:summary="@string/pref_root_summary"
        android:title="@string/pref_root_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="recycle"
        android:summary="@string/pref_recycle_summary"
        android:title="@string/pref_recycle_title" />

    <ListPreference
        android:defaultValue="@string/Theme_Light"
        android:entries="@array/themes_text"
        android:entryValues="@array/themes_values"
        android:key="theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary=""
        android:title="@string/pref_theme_title" />
</PreferenceScreen>
