<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.axet.filemanager.activities.MainActivity">
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_archive" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:orderInCategory="300"
        android:title="@string/menu_copy" />
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_content_cut_black_24dp"
        android:orderInCategory="400"
        android:title="@string/menu_cut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="400"
        android:title="@string/menu_delete"
        app:showAsAction="never" />
</menu>
